<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/karan">



            <TextView
                android:id="@+id/text_hospiton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="60sp"
                android:fontFamily="cursive"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>


            <EditText
                android:drawableLeft="@drawable/email"
                android:id="@+id/login_email_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_hospiton"
                android:hint="@string/hintemail"
                android:inputType="textEmailAddress"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <EditText
                android:id="@+id/login_password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email_view"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:padding="6dp"
                android:drawableLeft="@drawable/password"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:id="@+id/login_button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password_view"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loginbutton"
                android:textSize="24sp"
                android:textStyle="normal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/loginbutton"
                android:textColor="@android:color/background_light"/>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/signinusing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button_view"
                android:text="or Sign in using"
                android:textColor="#000000"
                android:textStyle="normal"
                android:layout_centerInParent="true"
                android:textSize="20sp"/>


            <com.google.android.gms.common.SignInButton
                android:layout_marginLeft="120dp"
                android:id="@+id/googlesignin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/signinusing">
            </com.google.android.gms.common.SignInButton>

           <Button
               android:id="@+id/phone_verify"
               android:layout_width="100dp"
               android:layout_below="@+id/signinusing"
               android:layout_height="50dp"
               android:background="@drawable/loginbutton"
               android:layout_toRightOf="@+id/googlesignin"
               android:text="Phone"
               android:layout_marginRight="30dp"
               android:layout_marginLeft="10dp"
               android:textColor="#FFF"/>

            <TextView
                android:id="@+id/Need_New_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neednewaccount"
                android:layout_below="@+id/googlesignin"
                android:textStyle="normal"
                android:layout_marginRight="23dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="@android:color/background_dark"
                android:layout_centerHorizontal="true"
                />

</RelativeLayout>